--- a/main.css
+++ b/main.css
@@ -82,9 +82,9 @@ nav {
 .jumbotron button {
     margin-top: 2em;
     background-color: transparent;
-    border: 5px solid #46E6FF;
+    border: 2px solid #90EE90;
     color: white;
-    width: 15em;
+    width: 12em;
     height: 3em;
     font-weight: 500;
 }
